--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -21,7 +21,7 @@
 <body>
    
         <img src="DocScanner Jan 12, 2026 12-25 PM (1)-1.png" alt="" height="300px"  >
-        <h1>Hi my Name is Maga pariv S</h1>
+        <h1>Hi my Name is Maga parththiv S</h1>
         <h2>Fun Facts about me:
         </h2>
         <ul>
@@ -37,3 +37,4 @@
 </body>
 
 </html>
+
